# hl-notify

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  aggregator.py  bot.py  config.py  docker-compose.yml  formatter.py  hyperliquid_api.py  pyproject.toml  requirements.txt  storage.py  ws_manager.py
.github/workflows/: tests.yml
tests/: conftest.py  test_bot.py  test_formatter.py  test_hyperliquid_api.py  test_storage.py
