[project]
name = "hl-notify"
version = "0.1.0"
description = "A Telegram bot for Hyperliquid wallet notifications"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9,<4",
    "python-dotenv>=1.0",
    "python-telegram-bot==22.6",
    "websockets>=13.0,<14",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
]
